tests/error/enum_errors/use_enum_class2.err
Error: Expected a value (at $FILE:15:6)
   | 
13 | @compile_guppy
14 | def fun() -> None:
15 |     g(MyEnum)
   |       ^^^^^^ Expected a value, got a guppy enum class `MyEnum`

Help: You might use an enum variant here instead

Guppy compilation failed due to 1 previous error
